--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Brian Demant <brian.demant@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.8",
+    "jest": "^26.5.3",
     "ts-jest": "^26.4.1",
     "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.3"
